letsencrypt/sockshop-ingress.yml
# Configuration to issue a let's encrypt certificate for the socks shop domain name.
# Note: Domain name is 'zenitugo.com.ng'  and sub-domain name is 'sockshop'

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sockshop.zenitugo.com.ng
    secretName: sockshop-tls-prod
  rules:
  - host: sockshop.zenitugo.com.ng
    http:
      paths:
      - path: /
        backend:
          service:
            name: front-end-svc
            port:
              number: 8079
